--- a/c_font/inde.html
+++ b/c_font/inde.html
@@ -46,7 +46,56 @@
             <div id="Woman">
                 <img src="./assets/Woman.png" alt="Woman"/>
             </div>
+
+            <div id="NFR_Vision">
+                <div id="Banner">
+                    <img id="Banner_img" src="./assets/NRF_Vision.png" alt="Banner"/>
+                </div>
+                
+            </div>
+
+            <div id="Title">
+                <h1>NRF 2020: Conheça os top 5 assuntos do evento.</h1>
+                <p id="Primari">O maior evento sobre varejo do 
+                mundo mostrando as tendências,
+                oportunidades e inivações para o setor.</p>
+                <p id="Fonte">Fonte: CMO ADOBE</p>
+                <div id="Line">
+                    <img src="./assets/Line.png" alt="Line_ciatividade"/>
+                </div>
+            </div>
+
+            <div id="NBA_Whatsapp">
+                <div id="NBA">
+                    <img id="NBA_img" src="./assets/NBA.png" alt="NBA"/>
+                    <h5>Petição para colocar Kobe
+                        Bryant no logo da NBA.
+                    </h5>
+                    <p id="Fonte">Fonte: Daily Mail</p>
+                    <img id="Bar_NBA" src="./assets/NBA_Bar.png" alt="NBA_Bar"/>
+                </div>
+
+                <div id="Whatsapp">
+                    <img id="Whats_img" src="./assets/Whatsapp.png" alt="whatsapp"/>
+                    <h5>WhatsApp terá função de
+                        pagamento em 2020.
+                    </h5>
+                    <p id="Fonte">Fonte: Proxxima</p>
+                    <img id="Bar_Whats" src="./assets/Whatsapp_Bar.png" alt="Bar_WhatsApp"/>
+
+                </div>
+            </div>
+
+
+
+
+            <div id="Bar_orange">
+                <img src="./assets/Logo_bar_orange.png" alt="Bar_orenge"/>
+            </div>
         </div>
+        <footer>
+            <img src="./assets/Footer.png" alt="Footer"/>
+        </footer>
     </div>
 </body>
 </html>
